--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+#root {
+  width: 100vw;
+  background: #d5d8dd;
+  padding: 0 10vw;
+  display: flex;
+  justify-content: center;
+}
+
+/*
+body {
+  background: #d5d8dd;
+  padding: 0 10vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-image: url(static/pokeball-icon.png);
+  background-repeat: no-repeat;
+  background-position-x: -180px;
+  background-position-y: -80px;
+  width: 100%;
+}
+*/
+
+.loading-container {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+  background-color: white;
+}
+
+.loading-pokeball {
+  height: 60px;
+  filter: brightness(80%);
+  animation: rotatePokeBall ease-in-out 3s infinite;
+}
+
+@keyframes rotatePokeBall {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*
+.hideLoading {
+  animation: hideLoading ease-in-out 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes hideLoading {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: -100vh;
+  }
+}
+*/
+
+.hideLoading {
+  display: none !important;
+}
+
+.search-container {
+  margin: 30px 10px;
+}
+
+.search-input {
+}
+
+.search-button {
+  background-color: #ff5350;
+  height: 40px;
+  width: 40px;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: #ff535088 5px 5px 15px;
+  color: white;
+  font-size: 18px;
 }
