--- a/src/index.css
+++ b/src/index.css
@@ -397,6 +397,27 @@ p::first-letter {
   background-color: rgb(185, 235, 255);
 }
 
+.modal-abilities-container {
+  position: relative;
+  width: 450px;
+  top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ability-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 20px;
+  text-align: center;
+}
+
+.ability-container h5::first-letter {
+  text-transform: capitalize;
+}
+
 .nav.nav-tabs .nav-link.active {
   color: #111111;
   font-weight: bold;
